# incus-composer

./: .gitignore  Cargo.toml  DEVELOPMENT.md  PROJECT_STATUS.md  README.adoc  README.md  SCHEMA.md  custom-deploy.sh  custom-lock.yaml  demo-deployment.sh  hospital-deployment.sh  pixi.toml
book/: .gitignore  build.nu  development.adoc  index.adoc  introduction.adoc  optional-elements.adoc  project-status.adoc  schema.adoc
book/includes/: optional-elements-summary.adoc  project-info.adoc  schema-examples.adoc
examples/: base-hospital-network.yaml  docker-compose.yaml  incus-compose.yaml  optional-elements-demo.yaml  simple.yaml
src/: main.rs  schema.rs
tasks/: consistency-validation.adoc  define-implied-value-options.adoc  define-schema.adoc
