[package]
name = "incus-composer"
version = "0.1.0"
edition = "2021"
authors = ["incus-composer contributors"]
description = "A tool for managing Incus system containers and VMs, similar to docker-compose"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
